fixed table alignment and borders in create alert

--- a/retail_alerts/lulu_alerts/static/lulu_alerts/variables.css
+++ b/retail_alerts/lulu_alerts/static/lulu_alerts/variables.css
@@ -230,11 +230,13 @@
 .index-banner h1 {
   color: #661FFF;
   font-weight: bold;
+  font-size: calc(2rem + 0.9vw);
 }
 
 .index-banner h2 {
   font-size: 27px;
   line-height: 32px;
+  font-size: calc(1.2rem + 0.9vw);
 }
 
 #homepageinfo h2 {
